Added basic Main Menu

--- a/Wordle/Wordle.csproj
+++ b/Wordle/Wordle.csproj
@@ -69,4 +69,10 @@
 		<PackageReference Include="Plugin.Maui.Audio" Version="3.0.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="MainMenu.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
