--- a/Wordle/Wordle.csproj
+++ b/Wordle/Wordle.csproj
@@ -76,6 +76,9 @@
 	  <MauiXaml Update="MainMenu.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="SettingsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
